# exec_with_local_desktop

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
proto/: exec.proto
src/: args.rs  client.rs  gen_cert.rs  lib.rs  main.rs  server.rs
src/server/: executor.rs
tests/: path.rs  server.rs  tls.rs
