[package]
edition = "2024"
name = "exec_with_local_desktop"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20"}

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
