[package]
edition = "2024"
name = "exec_with_local_desktop"
version = "0.1.0"

[dependencies]
bon = "3.8.1"
clap = {version = "4.5.51", features = ["derive"]}
prost = "0.14.1"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["macros", "process", "rt-multi-thread"]}
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20"}
which = "8.0.0"

[build-dependencies]
tonic-prost-build = "0.14.2"

[lib]
name = "exec_with_local_desktop"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.9.2"

[[bin]]
name = "rex"
path = "src/main.rs"
